--- a/TM.RestHour/Views/Regime/Index.cshtml
+++ b/TM.RestHour/Views/Regime/Index.cshtml
@@ -122,7 +122,7 @@
                                                             <button type="button" class="btn btn-link" style="padding:0;">@*Click here to see more information on the regimes*@</button>
                                                             <div> &nbsp; </div>
                                                             @*<input type="radio" name="RName" value="1" checked>IMO STCW 2010<br>*@
-                                                            <button type="button" align="center" class="button1 wi" id="btnAdd1" onclick="return AddTab1();">Set Default Regime</button>
+                                                            <button type="button" align="center" class="button1 downbtnt" style="background-color: #5e77ab" id="btnAdd1" onclick="return AddTab1();">Set Default Regime</button>
                                                         </div>
                                                     </div>
                                                     <div role="tabpanel" class="tab-pane" id="profile">
@@ -141,7 +141,7 @@
                                                             <button type="button" class="btn btn-link" style="padding:0;">@*Click here to see more information on the regimes*@</button>
                                                             <br />
                                                             @*<input type="radio" name="RName" value="2" checked>ILO Rest<br>*@
-                                                            <button type="button" align="center" class="button1 wi" id="btnAdd2" onclick="return AddTab2();">Set Default Regime</button>
+                                                            <button type="button" align="center" class="button1 downbtnt" style="background-color: #5e77ab" id="btnAdd2" onclick="return AddTab2();">Set Default Regime</button>
 
                                                         </div>
                                                     </div>
@@ -161,7 +161,7 @@
                                                             <button type="button" class="btn btn-link" style="padding:0;">@*Click here to see more information on the regimes*@</button>
                                                             <br />
                                                             @*<input type="radio" name="RName" value="3" checked>ILO Work<br>*@
-                                                            <button type="button" align="center" class="button1 wi" id="btnAdd3" onclick="return AddTab3();">Set Default Regime</button>
+                                                            <button type="button" align="center" class="button1 downbtnt" style="background-color: #5e77ab" id="btnAdd3" onclick="return AddTab3();">Set Default Regime</button>
 
                                                         </div>
                                                     </div>
@@ -190,7 +190,7 @@
                                                             <button type="button" class="btn btn-link" style="padding:0;">@*Click here to see more information on the regimes*@</button>
                                                             <br />
                                                             @*<input type="radio" name="RName" value="7" checked>OCIMF<br>*@
-                                                            <button type="button" align="center" class="button1 wi" id="btnAdd7" onclick="return AddTab7();">Set Default Regime</button>
+                                                            <button type="button" align="center" class="button1 downbtnt" style="background-color: #5e77ab" id="btnAdd7" onclick="return AddTab7();">Set Default Regime</button>
 
                                                         </div>
                                                     </div>
@@ -209,7 +209,7 @@
                                                             <button type="button" class="btn btn-link" style="padding:0;">@*Click here to see more information on the regimes*@</button>
                                                             <br />
                                                             @*<input type="radio" name="RName" value="4" checked>Customised<br>*@
-                                                            <button type="button" align="center" class="button1 wi" id="btnAdd4" onclick="return AddTab4();">Set Default Regime</button>
+                                                            <button type="button" align="center" class="button1 downbtnt" style="background-color: #5e77ab" id="btnAdd4" onclick="return AddTab4();">Set Default Regime</button>
 
                                                         </div>
                                                     </div>
@@ -240,7 +240,7 @@
 
 
 
-                                                            <button type="button" align="center" class="button1 wi" id="btnAdd9" onclick="return AddTab9();">Set Default Regime</button>
+                                                            <button type="button" align="center" class="button1 downbtnt" style="background-color: #5e77ab" id="btnAdd9" onclick="return AddTab9();">Set Default Regime</button>
 
                                                         </div>
                                                     </div>
