--- a/TM.RestHour/Views/Equipments/Index2.cshtml
+++ b/TM.RestHour/Views/Equipments/Index2.cshtml
@@ -19,33 +19,16 @@
 <script src="~/Scripts/jquery-3.6.0.min.js"></script>
 
 <script src="~/Scripts/jquery-ui.js"></script>
-<script src="~/Scripts/CrewListing.js"></script>
+
 
 <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
 <script src="~/Scripts/DataTables/dataTables.select.min.js"></script>
-
-
-
-
-
-
-
-
-
-
-
 
 <link href="dist/dual-listbox.css" rel="stylesheet">
 <script src="~/Scripts/notify.min.js"></script>
 
 <script src="~/Scripts/toastr.min.js"></script>
 <link href="~/Content/toastr.min.css" rel="stylesheet" />
-
-
-
-
-
-
 
 <link href="~/link/css/rank.css" rel="stylesheet" />
 
@@ -54,14 +37,15 @@
 <link href="~/Content/plugin/datepicker/datepicker.css" rel="stylesheet" />
 <link href="~/Content/plugin/datepicker/css/pickmeup.css" rel="stylesheet" />
 
-<script src="~/Scripts/Equipments.js"></script>
+@*<script src="~/Scripts/Equipments.js"></script>*@
+<script src="~/Scripts/Medicine.js"></script>
 
 @Html.Hidden("SaveMedicine", @Url.Action("SaveMedicine", "Equipments"))
 @Html.Hidden("loaddata2", @Url.Action("LoadData2", "Equipments"))
 @Html.Hidden("GetMedicineByID", @Url.Action("GetMedicineByID", "Equipments"))
 @Html.Hidden("DeleteMedicine", @Url.Action("DeleteMedicine", "Equipments"))
 
-@Html.Hidden("loadData2Print", @Url.Action("LoadData2Print", "Equipments"))
+@Html.Hidden("loaddata2Print", @Url.Action("LoadData2Print", "Equipments"))
 
 <style>
     .bac {
@@ -105,31 +89,39 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label for="Nationality">Country</label>
-                                @Html.DropDownListFor(model => model.CountryID, (IEnumerable<SelectListItem>)ViewBag.CountryMaster, "Select", new { @class = "form-control" })
+                                @Html.DropDownListFor(model => model.CountryID, (IEnumerable<SelectListItem>)ViewBag.CountryMaster, "Select", new { @class = "form-control", @id = "CountryID" })
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="form-group">
-                                <label for="Category">Category<span class="myDIV"><i class="fa fa-info-circle" aria-hidden="true"></i><div class="hide">
-    <table>
-        <tr>
-            <td>Category A</td>
-            <td>Lignocaine Hydrochloride Anhydrous (vials) 10mg/20ml 
-            </td>
-        </tr>
-        <tr>
-            <td>Category B</td>
-            <td>Lignocaine Hydrochloride Anhydrous (vials) 10mg/20ml
-           </td>
-        </tr>
-        <tr>
-            <td>Category C</td>
-            <td>Lignocaine Hydrochloride Anhydrous
-            10mg/20ml Lignocaine</td>
-        </tr>
-    </table>
-</div></span></label>
-                                
+                                <label for="Category">
+                                    Category<span class="myDIV">
+                                        <i class="fa fa-info-circle" aria-hidden="true"></i><div class="hide">
+                                            <table>
+                                                <tr>
+                                                    <td>Category A</td>
+                                                    <td>
+                                                        Lignocaine Hydrochloride Anhydrous (vials) 10mg/20ml
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Category B</td>
+                                                    <td>
+                                                        Lignocaine Hydrochloride Anhydrous (vials) 10mg/20ml
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Category C</td>
+                                                    <td>
+                                                        Lignocaine Hydrochloride Anhydrous
+                                                        10mg/20ml Lignocaine
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </div>
+                                    </span>
+                                </label>
+
                                 <select id="Category" style="width:100%;" class="form-control">
                                     <option value="">Select</option>
                                     <option value="CategoryA">Category A</option>
@@ -143,14 +135,17 @@
                                 <label for="NoOfCrew">NoOfCrew</label>
                                 <select id="NoOfCrew" style="width:100%;" class="form-control">
                                     <option value="">Select</option>
-                                    <option value="10">≤ 10</option>
-                                    <option value="20">≤ 20</option>
-                                    <option value="30">≤ 30</option>
-                                    <option value="40">≤ 40</option>
+                                    <option value="LessThan10">≤ 10</option>
+                                    <option value="LessThan20">≤ 20</option>
+                                    <option value="LessThan30">≤ 30</option>
+                                    <option value="LessThan40">≤ 40</option>
                                 </select>
                             </div>
 
                         </div>
+
+                        <button type="button" class="button1" id="btnShow" onclick="return loadData2();" style="width:138px;">Show</button>
+
                     </div>
                 </div>
                 <div class="row">
@@ -179,15 +174,15 @@
                                             <img src="../img/excel-file-open.png" class="img-responsive" />
                                         </div>
                                         <div class="export-template-label" style="display:inline-block;margin:4px 5px -8px 0px;">
-                                            <a href="../MedicineNew/MedicineList.xlsx" target="_self" class="downexcel" download >
+                                            <a href="../MedicineNew/MedicineList.xlsx" target="_self" class="downexcel" download>
                                                 Download Template
                                             </a>
                                         </div>
 
                                     </div>
-                                    </div>
                                 </div>
                             </div>
+                        </div>
 
                     </div>
                     <div class="col-md-12">
@@ -221,14 +216,16 @@
                                     <thead>
                                         <tr>
                                             <th>Medicine Name</th>
-                                            <th>QTY</th>
+                                            <th>ReqQty</th>
+                                            <th>Unit</th>
                                             <th>BatchNo</th>
                                             <th>Batch QTY</th>
+                                            <th>Present QTY</th>
                                             <th>Expiry Date</th>
                                             <th>Location</th>
-                                            <th>Prescribed For</th>
-                                            <th>Edit</th>
-                                            <th>Delete</th>
+                                            <th>PrescribedFor</th>
+                                            @*<th>Delete</th>
+                    <th>Delete</th>*@
                                         </tr>
                                     </thead>
                                 </table>
@@ -344,12 +341,14 @@
                             <thead>
                                 <tr>
                                     <th align="left">Medicine Name</th>
-                                    <th align="left">QTY</th>
+                                    <th align="left">ReqQty</th>
+                                    <th align="left">Unit</th>
                                     <th align="left">BatchNo</th>
                                     <th align="left">Batch QTY</th>
+                                    <th align="left">Present QTY</th>
                                     <th align="left">Expiry Date</th>
-                                    <th align="left">Location </th>
-                                    <th align="left">Prescribed For </th>
+                                    <th align="left">Location</th>
+                                    <th align="left">PrescribedFor</th>
                                 </tr>
                             </thead>
                         </table>
@@ -359,8 +358,8 @@
 
 
                     @*<div class="col-md-7 bac">
-            <div><input type="file" name="UploadFile" id="txtUploadFile" class="makethispretty" /></div>
-        </div>*@
+                            <div><input type="file" name="UploadFile" id="txtUploadFile" class="makethispretty" /></div>
+                        </div>*@
 
 
 
@@ -395,8 +394,15 @@
 
         $(document).ready(function () {
 
-            SetUpGrid2();
-            SetUpGridloadData2Print();
+            //$('#NoOfCrew').on('change', function () {
+            //    //alert('hi');
+            //    //debugger;
+
+
+            //});
+
+            //SetUpGrid2();
+            //SetUpGridloadData2Print();
 
         });
 
