--- a/TM.RestHour/Views/MedicalAssistance/TeleMedicine.cshtml
+++ b/TM.RestHour/Views/MedicalAssistance/TeleMedicine.cshtml
@@ -6,3 +6,218 @@
 
 <h2>TeleMedicine</h2>
 
+<div class="">
+    <ul class="container--tabs">
+        <li class="tab tabs--active">Tele Medic Details</li>
+        <li class="tab">Patient Deatils</li>
+    </ul>
+
+    <div class="container--content">
+        <div class="content content--active card">
+            <form>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="form-group">
+                            <label>Placeholder</label>
+                            <input type="text" class="form-control" placeholder="Placeholder txt" />
+                        </div>
+
+                        <div class="form-group">
+                            <label>Placeholder</label>
+                            <input type="text" class="form-control" placeholder="Placeholder txt" />
+                        </div>
+                        <div class="form-group">
+                            <label>Placeholder</label>
+                            <input type="text" class="form-control" placeholder="Placeholder txt" />
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <div class="form-group">
+                            <label>Placeholder</label>
+                            <input type="text" class="form-control" placeholder="Placeholder txt" />
+                        </div>
+
+                        <div class="form-group">
+                            <label>Placeholder</label>
+                            <input type="text" class="form-control" placeholder="Placeholder txt" />
+                        </div>
+                        <div class="form-group">
+                            <label>Placeholder</label>
+                            <input type="text" class="form-control" placeholder="Placeholder txt" />
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <div class="form-group">
+                            <label>Placeholder</label>
+                            <input type="text" class="form-control" placeholder="Placeholder txt" />
+                        </div>
+
+                        <div class="form-group">
+                            <label>Placeholder</label>
+                            <input type="text" class="form-control" placeholder="Placeholder txt" />
+                        </div>
+                        <div class="form-group">
+                            <label>Placeholder</label>
+                            <input type="text" class="form-control" placeholder="Placeholder txt" />
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="add-btn">
+                            <button>Add</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-box">
+                    <div class="row">
+                        <div class="col-lg-3">
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="form-group">
+                                <label>Placeholder</label>
+
+                                <select class="form-control">
+                                    <option>select...</option>
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Placeholder</label>
+                                <input type="text" class="form-control" placeholder="Placeholder txt" />
+                            </div>
+                            <div class="form-group">
+                                <label>Placeholder</label>
+                                <input type="text" class="form-control" placeholder="Placeholder txt" />
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="form-group">
+                                <label>Placeholder</label>
+                                <input type="text" class="form-control" placeholder="Placeholder txt" />
+                            </div>
+
+                            <div class="form-group">
+                                <label>Placeholder</label>
+                                <input type="text" class="form-control" placeholder="Placeholder txt" />
+                            </div>
+                            <div class="form-group">
+                                <label>Placeholder</label>
+                                <input type="text" class="form-control" placeholder="Placeholder txt" />
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="form-group">
+                                <label>Placeholder</label>
+                                <input type="text" class="form-control" placeholder="Placeholder txt" />
+                            </div>
+
+                            <div class="form-group">
+                                <label>Placeholder</label>
+                                <input type="text" class="form-control" placeholder="Placeholder txt" />
+                            </div>
+                            <div class="form-group">
+                                <label>Placeholder</label>
+                                <input type="text" class="form-control" placeholder="Placeholder txt" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-box">
+                    <h5>Type of Ailment</h5>
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <label>Placeholder</label>
+                                <select class="form-control">
+                                    <option>select...</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <label>Placeholder</label>
+                                <input type="text" class="form-control" placeholder="Placeholder txt" />
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div class="card-box">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <h5>Type of Ailment</h5>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <label>Placeholder</label>
+                                        <select class="form-control">
+                                            <option>select...</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <label>Placeholder</label>
+                                        <select class="form-control">
+                                            <option>select...</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            </div>
+                        <div class="col-lg-6">
+                            <h5>Type of Ailment</h5>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <label>Placeholder</label>
+                                        <select class="form-control">
+                                            <option>select...</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <label>Placeholder</label>
+                                        <select class="form-control">
+                                            <option>select...</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </form>
+            
+        </div>
+        <div class="content">
+            <h1>This is tab 2</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur doloribus necessitatibus possimus. Sapiente aspernatur neque atque in eum tenetur id!</p>
+        </div>
+       
+    </div>
+</div>
+
+<script>
+    const tabs = document.querySelectorAll(".tab");
+    const contents = document.querySelectorAll(".content");
+
+    for (let i = 0; i < tabs.length; i++) {
+        tabs[i].addEventListener("click", () => {
+            for (let j = 0; j < contents.length; j++) {
+                contents[j].classList.remove("content--active");
+            }
+            for (let jj = 0; jj < tabs.length; jj++) {
+                tabs[jj].classList.remove("tabs--active");
+            }
+            contents[i].classList.add("content--active");
+            tabs[i].classList.add("tabs--active");
+        });
+    }
+
+</script>
